<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AboutUs"
    android:background="#FFF">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/giftslistTV"
            style="@style/aboutUSTextViewtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/bg_about_us_tv"
            android:text="@string/giftsList"
            android:textColor="#FFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/redemptiondLayout"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/pointsRedemptionTitleTV2"
            style="@style/aboutUSTextViewtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/bg_about_us_tv"
            android:text="@string/pointsRedemption"
            android:textColor="#FFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pointsEarninglinearLayout"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/pointsEarningTV"
            style="@style/aboutUSTextViewtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/bg_about_us_tv"
            android:text="@string/pointsEarnings"
            android:textColor="#FFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutProgramLinearLayout"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/abouttheProgramTitleTV"
            style="@style/aboutUSTextViewtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_about_us_tv"
            android:text="@string/aboutProgram"
            android:textColor="#FFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.035"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/redemptiondLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="50dp"
            android:visibility="gone"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/pointsRedemptionTitleTV2"
            app:layout_constraintTop_toBottomOf="@+id/pointsRedemptionTitleTV2"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/pointsRedemptionLine1"
                style="@style/aboutUSTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pointsRedemptionLine1" />

            <TextView
                android:id="@+id/pointsRedemptionLine2"
                style="@style/aboutUSTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/pointsRedemptionLine2" />

            <TextView
                android:id="@+id/pointsRedemptionLine3"
                style="@style/aboutUSTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/pointsRedemptionLine3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/aboutProgramLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="50dp"
            android:visibility="gone"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/abouttheProgramTitleTV"
            app:layout_constraintTop_toBottomOf="@+id/abouttheProgramTitleTV"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/aboutProgramLine1"
                style="@style/aboutUSTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutProgramLine1" />

            <TextView
                android:id="@+id/aboutProgramLine2"
                style="@style/aboutUSTextView"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutProgramLine2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pointsEarninglinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:paddingEnd="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/pointsEarningTV"
            app:layout_constraintTop_toBottomOf="@+id/pointsEarningTV"
            app:layout_constraintVertical_bias="0.007">

            <TextView
                android:id="@+id/ledPointsTV"
                style="@style/aboutUSTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ledPoints" />

            <TextView
                android:id="@+id/lampsPointsTV"
                style="@style/aboutUSTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lampsPoints" />

            <TextView
                android:id="@+id/tradePointsTV"
                style="@style/aboutUSTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tradePoints" />

            <TextView
                android:id="@+id/pointsEarningsLine1TV"
                style="@style/aboutUSTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/pointsEarningsLine1" />

            <TextView
                android:id="@+id/pointsEarningsLine2TV"
                style="@style/aboutUSTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/pointsEarningsLine2" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/giftsLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:visibility="gone"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/giftslistTV"
            app:layout_constraintTop_toBottomOf="@+id/giftslistTV"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/giftsListPointsHeader"
                    style="@style/aboutUSTable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/points"
                    android:layout_weight="30"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/giftsListPointsOptionHeader"
                    style="@style/aboutUSTable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gifts"
                    android:gravity="center_horizontal"
                    android:layout_weight="70"
              />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ListView
                    android:id="@+id/pointsListViewAboutUS"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30" />

                <ListView
                    android:id="@+id/giftsListViewAboutUS"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70" />
            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="235dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/about_us" />


    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>